--- a/assets/styles/atoms/chevron/_chevron.scss
+++ b/assets/styles/atoms/chevron/_chevron.scss
@@ -4,84 +4,84 @@
 
 // Build the actual chevron using borders
 @mixin chevron {
-    border-style: solid;
-    border-width: rem-calc(2 2 0 0);
-    content: '';
-    display: inline-block;
-    height: rem-calc(5);
-    left: 0.15em;
-    position: relative;
-    top: 0.15em;
-    transform: rotate(135deg);
-    vertical-align: top;
-    width: rem-calc(5);
+  position: relative;
+  top: 0.15em;
+  left: 0.15em;
+  display: inline-block;
+  width: rem-calc(5);
+  height: rem-calc(5);
+  border-width: rem-calc(2 2 0 0);
+  border-style: solid;
+  content: "";
+  transform: rotate(135deg);
+  vertical-align: top;
 }
 
 @mixin chevron-primary {
-    &:before {
-        border-color: palette("primary");
-    }
+  &::before {
+    border-color: palette("primary");
+  }
 }
 
 @mixin chevron-white {
-    &:before {
-        border-color: white;
-    }
+  &::before {
+    border-color: white;
+  }
 }
 
 // Init the default chevron (points down)
 .chevron {
-    height: rem-calc(8);
-    width: rem-calc(8);
+  width: rem-calc(8);
+  height: rem-calc(8);
 
-    &:before {
-        @include chevron;
-    }
+  &::before {
+    @include chevron;
+  }
 }
 
 .chevron--inline {
-    &:before {
-        top: 0.3em;
-    }
+  &::before {
+    top: 0.3em;
+  }
 }
 
 // Chevron points right
 .chevron--right {
-    &:before {
-        left: 0;
-        transform: rotate(45deg);
-    }
+  &::before {
+    left: 0;
+    transform: rotate(45deg);
+  }
 }
 
 // Chevron points up
 .chevron--up {
-    &:before {
-        top: 0;
-        transform: rotate(-45deg);
-    }
+  &::before {
+    top: 0;
+    transform: rotate(-45deg);
+  }
 }
 
 // Chevron points left
 .chevron--left {
-    &:before {
-        left: 0.25em;
-        transform: rotate(-135deg);
-    }
+  &::before {
+    left: 0.25em;
+    transform: rotate(-135deg);
+  }
 }
 
 // Primary coloured Chevron modifier
 .chevron--primary {
-    @include chevron-primary;
+  @include chevron-primary;
 }
 
 // Black forced chevron
 .chevron--black {
-    &:before {
-        border-color: black;
-    }
+  &::before {
+    border-color: black;
+  }
 }
 
 // White coloured Chevron modifier
 .chevron--white {
-    @include chevron-white;
+  @include chevron-white;
 }
