--- a/assets/styles/atoms/link/_link.scss
+++ b/assets/styles/atoms/link/_link.scss
@@ -4,74 +4,73 @@
 a,
 .link {
 
-    // Default link uses the primary palette
-    @include link() {
-        text-decoration: underline;
-        text-decoration-skip: ink;
-        color: palette("primary");
-    }
+  // Default link uses the primary palette
+  @include link() {
+    color: palette("primary");
+    text-decoration: underline;
+    text-decoration-skip-ink: auto;
+  }
 
-    @include link-hover() {
-        color: tint(palette("primary"), "darken");
-    }
+  @include link-hover() {
+    color: tint(palette("primary"), "darken");
+  }
 
-    &:focus {
-        outline: 1px dotted palette("black");
-    }
+  &:focus {
+    outline: 1px dotted palette("black");
+  }
 
-    &:active {
-        outline: none;
-    }
+  &:active {
+    outline: none;
+  }
 }
 
 // Remove all styling for a 'plain' modifier
 .link--plain {
-    @include link() {
-        text-decoration: none;
-        text-decoration-skip: none;
-        color: currentColor;
-    }
+  @include link() {
+    color: currentColor;
+    text-decoration: none;
+    text-decoration-skip: none;
+  }
 }
-
 .link--bold {
-    @include link() {
-        font-weight: 500;
-    }
+  @include link() {
+    font-weight: 500;
+  }
 }
 
 .link--black {
-    @include link() {
-        color: palette("black");
-    }
+  @include link() {
+    color: palette("black");
+  }
 
-    @include link-hover() {
-        color: paletet(black);
-    }
+  @include link-hover() {
+    color: paletet(black);
+  }
 }
 
 .link--white {
-    @include link() {
-        color: white;
-    }
+  @include link() {
+    color: white;
+  }
 
-    @include link-hover() {
-        color: white;
-    }
+  @include link-hover() {
+    color: white;
+  }
 }
 
 .link--underlined {
-    @include link() {
-        text-decoration: underline !important;
-        text-decoration-skip: ink !important;
-    }
+  @include link() {
+    text-decoration: underline !important;
+    text-decoration-skip-ink: auto !important;
+  }
 }
 
 // Block display modifier
 .link--block {
-    display: block;
+  display: block;
 }
 
 .link--fancy {
-    font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
