[Improved] Underline inverses links on hover

--- a/assets/styles/tools/_inverse.scss
+++ b/assets/styles/tools/_inverse.scss
@@ -29,6 +29,7 @@
 
         @include link-hover() {
             color: tint(white, 'darken');
+            text-decoration: underline;
         }
     }
 
