--- a/assets/styles/atoms/avatar/_avatar.scss
+++ b/assets/styles/atoms/avatar/_avatar.scss
@@ -5,7 +5,7 @@
 .avatar {
   width: rem-calc(40);
   height: rem-calc(40);
-  background: #eee;
+  background: #EEE;
   border-radius: 100%;
 
   img {
