rejig directory structure for assets

--- a/src/assets/styles/design-tokens.scss
+++ b/src/assets/styles/design-tokens.scss
@@ -1,6 +1,6 @@
-@import "design/colours.map";
-@import "design/breakpoints.map";
-@import "design/spacing.map";
+@import "../design/colours.map";
+@import "../design/breakpoints.map";
+@import "../design/spacing.map";
 
 @import "tools/palette";
 @import "tools/breakpoint";
