spacing doc fixed

--- a/src/assets/styles/layout/_spacing.scss
+++ b/src/assets/styles/layout/_spacing.scss
@@ -4,9 +4,9 @@
 // Generates an array of utility selectors to attribute spacing based on the spacing design token.
 // See fractal docco page for more info re: available selectors per project
 
-// TLDR; - `p-top-double` / `m-top-double`
-// TLDR; - `p-top-reset--medium` / `m-top-reset--medium`
-// TLDR; - `p-bottom-half` / `m-bottom-half`
+// TLDR; - `p-top-double` / `mg-top-double`
+// TLDR; - `p-top-reset--medium` / `mg-top-reset--medium`
+// TLDR; - `p-bottom-half` / `mg-bottom-half`
 // ==========================================================================
 
 // Create a map of all the 'positions' we want to creat utilities for, for example, `p-top`, `p-left` etc.
