--- a/src/assets/styles/tools/_font-ratio.scss
+++ b/src/assets/styles/tools/_font-ratio.scss
@@ -3,15 +3,21 @@
 //
 // Plugin docco - https://github.com/modularscale/modularscale-sass
 // tldr; - font-size: ms(3);
-// tldr; - font-size: ms(3, $thread: desktop);
+// tldr; - font-size: ms(3, $thread: small);
 //
-// The baseline is 2 scales, one that is a slightly larger ratio at desktop
-// See - http://www.modularscale.com/?15&px&1.200 and toggle the sass tab to get an idea of the scale
+// The baseline is 3 scales, small, default and large, each with a different base px value.
+// See - http://www.modularscale.com/?16&px&1.500 and toggle the sass tab to get an idea of the scale
 // ==========================================================================
 
 @import '~modularscale-sass/stylesheets/modularscale';
 
 $modularscale: (
-    base: 18px,
-    ratio: 1.15,
+    base: 16px,
+    ratio: 1.5,
+    small: (
+      base: 12px,
+    ),
+    large: (
+      base: 21px,
+    ),
 );
