--- a/src/assets/styles/design/colours.map.scss
+++ b/src/assets/styles/design/colours.map.scss
@@ -1,7 +1,9 @@
 
 $colours-map: (
   // Project Black
-  'black': (rgb(51, 51, 51)),
+  'black': (rgb(0, 0, 0)),
+  // Project Dark Grey
+  'dark-grey': (rgb(51, 51, 51)),
   // Project White
   'white': (rgb(255, 255, 255)),
   // Grey: Generally used for backgrounds
