--- a/src/components/atoms/page-title/page-title.html
+++ b/src/components/atoms/page-title/page-title.html
@@ -1,1 +1,1 @@
-<p class="page-title {{ pageTitle.modifier }}">{{ pageTitle.heading }}</p>
+<h1 class="page-title {{ pageTitle.modifier }}">{{ pageTitle.heading }}</h1>
