--- a/src/components/atoms/link/_link.scss
+++ b/src/components/atoms/link/_link.scss
@@ -7,6 +7,7 @@ a,
   // Default link uses the primary palette
   @include link() {
     color: palette("primary");
+    font-weight: 500;
     text-decoration: underline;
     text-decoration-skip-ink: auto;
   }
@@ -32,11 +33,11 @@ a,
     text-decoration-skip: none;
   }
 }
-.link--bold {
-  @include link() {
-    font-weight: 500;
-  }
-}
+// .link--bold {
+//   @include link() {
+//     font-weight: 500;
+//   }
+// }
 
 .link--black {
   @include link() {
@@ -73,4 +74,3 @@ a,
 .link--fancy {
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
-
