[Fixed] Font size and family for citation elements

--- a/src/components/atoms/cite/_cite.scss
+++ b/src/components/atoms/cite/_cite.scss
@@ -5,8 +5,8 @@
 // Default HTML element + specific class overwrites
 cite,
 .cite {
-  font-size: ms(-2);
-  // Trim the callout so the last child doesn't have spacing bottom
+  font-family: "Roboto";
+  font-size: ms(-1, $thread: large);
   font-style: normal;
   font-weight: bold;
 }
