--- a/src/components/atoms/micro/_micro.scss
+++ b/src/components/atoms/micro/_micro.scss
@@ -4,11 +4,11 @@
 
 // Micro Text
 .micro {
-  font-size: ms(-2);
-  line-height: 1.66;
+  font-size: ms(-1, $thread: large);
 }
 
-.micro--mid {
-  font-size: ms(-1);
-  line-height: 1.66;
-}
+// Deprecated?
+// .micro--mid {
+//   font-size: ms(-1);
+//   line-height: 1.66;
+// }
