[Fixed] Meta sizes

--- a/src/components/atoms/meta/_meta.scss
+++ b/src/components/atoms/meta/_meta.scss
@@ -6,7 +6,7 @@
   display: block;
   padding-bottom: spacing(base);
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: ms(-3);
+  font-size: ms(0, $thread: small);
   font-weight: bold;
   letter-spacing: rem-calc(3);
   line-height: 1.44;
@@ -34,7 +34,7 @@
 
 // Featured meta is slightly larger for added prominence
 .meta--featured {
-  font-size: ms(-2);
+  font-size: ms(-1, $thread: large);
 }
 
 // 'Highlight' modifier, essentially a more prominant meta, can often paired with standard 'meta' for nice headings etc
