[Fixed] Colour palette defs

--- a/src/components/atoms/pill/_pill.scss
+++ b/src/components/atoms/pill/_pill.scss
@@ -65,7 +65,7 @@ button.pill--grey {
 
 .pill--black {
   @include link() {
-    background: black;
+    background: palette("black");
     color: white;
   }
 }
