[Improved] Removed extraneous padding reset and explicitly set para sizes

--- a/src/components/atoms/blockquote/_blockquote.scss
+++ b/src/components/atoms/blockquote/_blockquote.scss
@@ -3,10 +3,13 @@
 // ==========================================================================
 
 blockquote {
-  font-size: ms(0, $thread: large);
   margin: spacing(25 0);
   position: relative;
   text-align: left;
+
+  p {
+    font-size: ms(0, $thread: large);
+  }
 
   // Font sizing and params for quote icons before and after text
   &::before {
