--- a/src/components/atoms/headings/_headings.scss
+++ b/src/components/atoms/headings/_headings.scss
@@ -18,7 +18,8 @@ h5,
 .h5,
 h6,
 .h6 {
-  padding: 0;
+  // ?? Headings don't have padding ??
+  // padding: 0;
   margin: 0 0 0.5em 0;
   color: palette("black");
   font-family: "Meta Serif OT", serif;
