--- a/src/components/atoms/paragraph/_paragraph.scss
+++ b/src/components/atoms/paragraph/_paragraph.scss
@@ -3,11 +3,13 @@
 // ==========================================================================
 
 p {
-  padding: 0;
-  // All paragraphs have margin set in em's
+  // ?? Paragraphs don't have padding ??
+  // padding: 0;
+  // All paragraphs have margin set in em
   margin: 0 0 1em 0;
+  font-size: ms(1, $thread: small);
 }
 
-.fancy {
-  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-}
+// .fancy {
+//   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+// }
