--- a/src/assets/styles/root.scss
+++ b/src/assets/styles/root.scss
@@ -6,6 +6,6 @@ html {
 }
 
 body {
-  font-family: Meta OT,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  font-family: $font-sans;
   line-height: 1.6;
 }
