--- a/src/components/atoms/headings/_headings.scss
+++ b/src/components/atoms/headings/_headings.scss
@@ -22,7 +22,7 @@ h6,
   // padding: 0;
   margin: 0 0 0.5em 0;
   color: palette("black");
-  font-family: "Meta Serif OT", serif;
+  font-family: $font-serif;
   font-weight: 500;
   line-height: 1.2;
 }
