--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 // Custom properties & Sass variables
 
 // Font-stacks
-$font-sans: Meta OT,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji!default;
-$font-serif: Meta Serif OT, Georgia, serif!default;
+$font-sans: 'Meta OT', Geneva, 'Lucida Grande', Arial, sans-serif !default;
+$font-serif: 'Meta Serif OT', Georgia, 'Hoefler Text', Times, 'Times New Roman', serif!default;
