[Fixed] Mixed content security warnings

--- a/src/components/atoms/image/image.html
+++ b/src/components/atoms/image/image.html
@@ -1,1 +1,1 @@
-<img class="{{ img.modifier }}" src="http://via.placeholder.com/500x500/eeeeee/dddddd" alt="Placeholder Image" />
+<img class="{{ img.modifier }}" src="https://via.placeholder.com/500x500/eeeeee/dddddd" alt="Placeholder Image" />
