[Improved] Font-family defintions to allow multi weights, the easy way.

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 // Custom properties & Sass variables
 
 // Font-stacks
-$font-sans: 'Meta OT', Geneva, 'Lucida Grande', Arial, sans-serif !default;
-$font-serif: 'Meta Serif OT', Georgia, 'Hoefler Text', Times, 'Times New Roman', serif!default;
+$font-sans: 'FFMetaWebPro', Geneva, 'Lucida Grande', Arial, sans-serif !default;
+$font-serif: 'FFMetaSerifWebPro', Georgia, 'Hoefler Text', Times, 'Times New Roman', serif!default;
