[Added] A bold, strong atom.

--- a/src/assets/styles/atoms.scss
+++ b/src/assets/styles/atoms.scss
@@ -2,6 +2,7 @@
 
 // All atoms
 @import "../../components/atoms/avatar/avatar";
+@import "../../components/atoms/bold/bold";
 @import "../../components/atoms/burger/burger";
 @import "../../components/atoms/blockquote/blockquote";
 @import "../../components/atoms/logo/logo";
