[Improved] Bold atom docco

--- a/src/components/atoms/bold/bold.html
+++ b/src/components/atoms/bold/bold.html
@@ -1,2 +1,2 @@
 <p>This is a paragraph with both <b>bold</b> (html4) and <strong>strong</strong> (html5) elements.
-These styles can also be implemented with the semantic overhead using the <code>.bold<code> class, like <span class="bold">this</span>.</p>
+These styles can also be implemented without the semantics using the <code>.bold<code> class, like <span class="bold">this</span>.</p>
