--- a/src/components/atoms/btn/_btn.scss
+++ b/src/components/atoms/btn/_btn.scss
@@ -7,13 +7,13 @@
   display: inline-block;
   padding: spacing(14 16);
   border-radius: rem-calc(3);
-  // @TODO - move font-family to global vars?
-  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: inherit;
   font-size: ms(1, $thread: small);
   font-weight: 500;
-  line-height: 1;
+  line-height: 1.1;
   text-align: center;
   transition: all ease 150ms;
+  vertical-align: middle;
 
   @include link() {
     border: rem-calc(2) solid palette("black");
@@ -35,8 +35,9 @@
 }
 
 button {
-  padding-right: 0;
-  padding-left: 0;
+  background-color: transparent;
+  border: transparent;
+  padding: 0;
 }
 
 @mixin btn-primary() {
