--- a/src/assets/styles/design/colours.map.scss
+++ b/src/assets/styles/design/colours.map.scss
@@ -1,15 +1,16 @@
-
 $colours-map: (
   // Project Black
-  'black': (rgb(0, 0, 0)),
+    "black": (rgb(0, 0, 0)),
   // Project Dark Grey
-  'dark-grey': (rgb(51, 51, 51)),
+    "dark-grey": (rgb(51, 51, 51)),
   // Project White
-  'white': (rgb(255, 255, 255)),
+    "white": (rgb(255, 255, 255)),
   // Grey: Generally used for backgrounds
-  'grey': (rgb(247, 247, 247)),
+    "grey": (rgb(247, 247, 247)),
+  // Grey-mid: Generally used for backgrounds
+    "grey-mid": (rgb(231, 231, 231)),
   // Primary: (Dark Pink) Used for primary elements such as buttons
-  'primary': (rgb(186, 0, 70)),
+    "primary": (rgb(186, 0, 70)),
   // Secondary: (Darker Pink) Used for secondary elements such as buttons
-  'secondary': (rgb(105, 22, 65)),
+    "secondary": (rgb(105, 22, 65))
 );
