--- a/src/components/atoms/btn/_btn.scss
+++ b/src/components/atoms/btn/_btn.scss
@@ -2,15 +2,14 @@
 // Button Atom
 // ==========================================================================
 
-
 @mixin btn() {
   display: inline-block;
-  padding: spacing(14 16);
+  padding: spacing(14 19.5);
   border-radius: rem-calc(3);
-  font-family: inherit;
+  font-family: $font-sans;
   font-size: ms(1, $thread: small);
-  font-weight: 500;
-  line-height: 1.1;
+  font-weight: 700;
+  line-height: 1.2;
   text-align: center;
   transition: all ease 150ms;
   vertical-align: middle;
@@ -18,7 +17,7 @@
   @include link() {
     border: rem-calc(2) solid palette("black");
     background: none;
-    background-color: white;
+    background-color: transparent;
     color: palette("black");
     text-decoration: none;
   }
@@ -62,7 +61,7 @@ button {
 
 .btn--white {
   @include link() {
-    border: rem-calc(2) solid palette("white");
+    border: rem-calc(2) solid transparent;
     background: palette("white");
     color: palette("primary") !important;
   }
