--- a/src/components/atoms/nav-item/_nav-item.scss
+++ b/src/components/atoms/nav-item/_nav-item.scss
@@ -7,7 +7,7 @@
 
   @include link() {
     color: palette("black");
-    font-size: ms(0);
+    font-size: ms(1, $thread: small);
     text-decoration: none;
   }
 
