--- a/src/assets/styles/design/colours.map.scss
+++ b/src/assets/styles/design/colours.map.scss
@@ -2,15 +2,15 @@ $colours-map: (
   // Project Black
     "black": (rgb(0, 0, 0)),
   // Project Dark Grey
-    "dark-grey": (rgb(51, 51, 51)),
+    "dark-grey": (#333),
   // Project White
-    "white": (rgb(255, 255, 255)),
+    "white": (#fff),
   // Grey: Generally used for backgrounds
-    "grey": (rgb(247, 247, 247)),
+    "grey": (#f7f7f7),
   // Grey-mid: Generally used for backgrounds
-    "grey-mid": (rgb(231, 231, 231)),
+    "grey-mid": (#e7e7e7),
   // Primary: (Dark Pink) Used for primary elements such as buttons
-    "primary": (rgb(186, 0, 70)),
+    "primary": (#ba0046),
   // Secondary: (Darker Pink) Used for secondary elements such as buttons
-    "secondary": (rgb(105, 22, 65))
+    "secondary": (#621b40)
 );
